--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple wiki API",
   "main": "wikiApiServer.js",
   "scripts": {
-    "start": "node wikiApiServer.js && node spaServer.js",
+    "start": "concurrently --kill-others \"node wikiApiServer.js\" \"node spaServer.js\"",
     "test": "node test.js"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/flpsan/plani-wiki#readme",
   "dependencies": {
+    "concurrently": "^6.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   },
