--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "wikiApiServer.js",
   "scripts": {
     "start": "concurrently --kill-others \"node wikiApiServer.js\" \"node spaServer.js\"",
-    "test": "node test.js"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.1.3"
+  },
   "keywords": [
     "wiki-api",
     "wiki-spa",
